tests/miniJava/neg/004052_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class class java { public static void Main ( String [ ] java ) { { } } } java { }
